# face-detector

./: CMakeLists.txt  README.md
backup/: mtcnn.cpp  rotateUtil_horizontal.h
mtcnn/: CMakeLists.txt  mtcnn.cpp  mtcnn.h  mtcnnMain.cpp
mtcnn_android/: Android.mk  Application.mk  CMakeLists.txt  mtcnn.cpp  mtcnn.h  mtcnnMain.cpp  mtcnn_jni.cpp
src/: CMakeLists.txt
